<resources>
    <string name="app_name">PopularMovie</string>
    <string name="rating_from">/10</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="vote_average">Vote Average</string>
    <string name="overview">Overview</string>
    <string name="no_data">No Data Available</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
</resources>
